# mysite

./: .gitignore  pyproject.toml
mysite/: settings.py  urls.py  views.py
render/: ai.py  models.py  serializers.py  urls.py  views.py
render/migrations/: 0001_initial.py  0002_operation_result.py  0003_operation_slackusername_alter_operation_x_and_more.py  0004_remove_operation_slackusername.py
